Fix alignment of headings and change h3

--- a/RockPaperScissor/styles.css
+++ b/RockPaperScissor/styles.css
@@ -1,6 +1,9 @@
 body{
     text-align: center;
 }
+h1{
+    margin-top: 300px;
+}
 h3{
     color: red;
 }
